Update index.xhtml for reveal.js 4.0.2

--- a/index.xhtml
+++ b/index.xhtml
@@ -9,21 +9,13 @@
 
     <title>Linux-AG</title>
 
-    <link rel="stylesheet" href="css/reveal.css" />
-    <link rel="stylesheet" href="css/theme/league.css" />
+    <link rel="stylesheet" href="dist/reset.css" />
+    <link rel="stylesheet" href="dist/reveal.css" />
+    <link rel="stylesheet" href="dist/theme/league.css" id="theme" />
     <link rel="stylesheet" href="css/theme/custom.css" />
 
-    <!-- Theme used for syntax highlighting of code -->
-    <link rel="stylesheet" href="lib/css/zenburn.css" />
-
-    <!-- Printing and PDF exports -->
-    <script>
-      var link = document.createElement('link');
-      link.rel = 'stylesheet';
-      link.type = 'text/css';
-      link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
-      document.getElementsByTagName('head')[0].appendChild(link);
-    </script>
+    <!-- Theme used for syntax highlighted code -->
+    <link rel="stylesheet" href="plugin/highlight/zenburn.css" id="highlight-theme" />
   </head>
 
   <body>
@@ -69,7 +61,7 @@
         </section>
         <section id="todo">
           <h2>Was haben wir vor?</h2>
-          <ul>
+          <ul style="font-size:0.9em">
             <li>CryptoParties/KSPs auf dem Sand organisieren</li>
             <li>Mitorganisation des <a href="https://www.tuebix.org">Tübix</a> (Tübinger Linuxtag)</li>
             <li>Evtl. eigene Software-Projekte</li>
@@ -140,11 +132,14 @@
       </div>
     </div>
 
-    <script src="lib/js/head.min.js"></script>
-    <script src="js/reveal.js"></script>
-
+    <script src="dist/reveal.js"></script>
+    <script src="plugin/notes/notes.js"></script>
+    <script src="plugin/markdown/markdown.js"></script>
+    <script src="plugin/highlight/highlight.js"></script>
     <script>
-      // More info https://github.com/hakimel/reveal.js#configuration
+      // More info about initialization and config:
+      // - https://revealjs.com/initialization/
+      // - https://revealjs.com/config/
       Reveal.initialize({
         // Display the slide number (flattened slide number / total slides)
         slideNumber: 'c/t',
@@ -171,13 +166,8 @@
         minScale: 0.2,
         maxScale: 1.5,
 
-        // More info https://github.com/hakimel/reveal.js#dependencies
-        dependencies: [
-          { src: 'plugin/markdown/marked.js' },
-          { src: 'plugin/markdown/markdown.js' },
-          { src: 'plugin/notes/notes.js', async: true },
-          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-        ]
+        // Learn about plugins: https://revealjs.com/plugins/
+        plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
       });
     </script>
   </body>
