--- a/index.xhtml
+++ b/index.xhtml
@@ -98,19 +98,11 @@
         <section id="meet">
           <h2>Interesse?</h2>
           <ul>
-            <li>Treffen:
-              <ul>
-                <li>Erstes Treffen: 25. Oktober 2019 (Freitag)</li>
-                <li>Uhrzeit: 18:30 Uhr</li>
-                <li>Ort: Raum A302 auf dem Sand 14</li>
-                <li>Weitere Termine: Alle zwei Wochen (s.
-                  <a href="https://www.linux-ag.uni-tuebingen.de">Website</a>)
-                </li>
-              </ul>
-            </li>
+            <li>Treffen: Siehe <a href="https://www.linux-ag.uni-tuebingen.de">Website</a></li>
             <li>Mailingliste: <a href="mailto:linux-ag@fsi.uni-tuebingen.de">linux-ag@fsi.uni-tuebingen.de</a>
               (<a href="https://www.fsi.uni-tuebingen.de/mailman/private/linux-ag/">Archiv</a>)
             </li>
+            <li>Chat (Matrix): #linux-ag:matrix.org</li>
             <!--
             <li>Helpdesk:
               <ul>
