Mention our short hikes

--- a/index.xhtml
+++ b/index.xhtml
@@ -53,7 +53,8 @@
         <section id="tasks">
           <h2>Was tun wir?</h2>
           <ul>
-            <li>Regelmäßige Treffen, teilweise mit Workshops/Präsentationen</li>
+            <li>Linux-AG Wanderungen</li>
+            <li><strike>Regelmäßige</strike> Treffen, teilweise mit Workshops/Präsentationen</li>
             <li>Capture the Flag (CTF) organisieren</li>
             <li><strike>Helpdesk (teilweise im Räte-Café und über die Mailingliste
               <a href="mailto:linux-helpdesk@fsi.uni-tuebingen.de">linux-helpdesk@fsi.uni-tuebingen.de</a>)</strike></li>
